Changed blog styling and continued improving parser